finished adapting the 'first' section

--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -13,6 +13,7 @@
 	// sizes
 	--container-width: 1280px;
 	--container-gap: 15px;
+	--header-height: 88px;
 
 	// fonts
 	--main-font: "Manrope", sans-serif;
