--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
   --green2: #5cba99;
   --container-width: 1280px;
   --container-gap: 15px;
+  --header-height: 88px;
   --main-font: "Manrope", sans-serif;
 }
 
@@ -100,6 +101,10 @@ body {
   margin: 0 auto;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .btn {
   text-decoration: none;
   color: var(--white);
@@ -120,14 +125,45 @@ body {
 .header {
   background-color: var(--white);
   padding: 18px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 55;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+.header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  background-color: var(--white);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  transition: right 0.5s;
+}
+.header.active::before {
+  right: 0;
 }
 .header__body {
   display: flex;
   align-items: center;
   gap: 32px;
 }
+@media (max-width: 1024px) {
+  .header__body {
+    justify-content: space-between;
+  }
+}
 .header__logo {
   flex-shrink: 0;
+  position: relative;
+  z-index: 2;
+}
+.header__logo img {
+  display: block;
 }
 .header__menu {
   margin-left: auto;
@@ -147,6 +183,20 @@ body {
   left: 0;
   width: 1px;
   background-color: var(--ultralight-gray);
+}
+@media (max-width: 1024px) {
+  .header__contact::before {
+    display: none;
+  }
+}
+@media (max-width: 1024px) {
+  .header__contact {
+    border-bottom: 1px solid var(--ultralight-gray);
+    width: 100%;
+    align-items: center;
+    padding: 0 0 20px 0;
+    margin-bottom: 20px;
+  }
 }
 .header__contact-text {
   font-weight: 500;
@@ -170,6 +220,11 @@ body {
   left: 32px;
   transition: all 0.5s;
 }
+@media (max-width: 1024px) {
+  .header__contact-phone::before {
+    display: none;
+  }
+}
 .header__contact-phone:hover {
   color: var(--orange);
 }
@@ -184,19 +239,51 @@ body {
   transform: scale(1.1);
 }
 
+@media (max-width: 1024px) {
+  .menu {
+    position: absolute;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100vh;
+    padding-top: calc(var(--header-height) + 30px);
+    padding-bottom: 30px;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: auto;
+    transition: right 0.5s;
+  }
+  .menu.active {
+    right: 0;
+  }
+}
 .menu__list {
   margin: 0;
   padding: 0;
   list-style-type: none;
   display: flex;
-  gap: 0 40px;
+  gap: 10px 40px;
   flex-wrap: wrap;
+  width: 100%;
+}
+@media (max-width: 1024px) {
+  .menu__list {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .menu__link {
   color: var(--black);
   text-decoration: none;
   transition: all 0.5s;
   position: relative;
+}
+@media (max-width: 1024px) {
+  .menu__link {
+    font-size: 1.125rem;
+  }
 }
 .menu__link::after {
   content: "";
@@ -216,16 +303,82 @@ body {
   right: 0;
 }
 
+.menu-btn {
+  display: none;
+  position: relative;
+  z-index: 2;
+  width: 40px;
+  height: 30px;
+  border: none;
+  background: transparent;
+}
+@media (max-width: 1024px) {
+  .menu-btn {
+    display: block;
+  }
+}
+.menu-btn span {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--black);
+  transition: all 0.3s;
+}
+.menu-btn::before, .menu-btn::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--black);
+  transition: all 0.5s;
+}
+.menu-btn::before {
+  top: 0;
+}
+.menu-btn::after {
+  bottom: 0;
+}
+.menu-btn.active span {
+  opacity: 0;
+}
+.menu-btn.active::before {
+  top: 50%;
+  transform: translateY(-50%) rotate(-45deg);
+}
+.menu-btn.active::after {
+  bottom: unset;
+  top: 50%;
+  transform: translateY(-50%) rotate(45deg);
+}
+
 .first {
+  --padding-top: 50px;
+  --padding-bottom: 50px;
   background-color: var(--white);
-  padding: 50px 0;
-  min-height: 100vh;
+  padding-top: calc(var(--header-height) + var(--padding-top));
+  padding-bottom: var(--padding-bottom);
+}
+@media (max-width: 1440px) {
+  .first {
+    --padding-top: 25px;
+  }
 }
 .first__body {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 20px;
+  min-height: calc(100vh - var(--header-height) - var(--padding-top) - var(--padding-bottom));
+}
+@media (max-width: 1024px) {
+  .first__body {
+    flex-direction: column-reverse;
+    min-height: 100%;
+  }
 }
 .first__content {
   flex: 0 1 48%;
@@ -241,13 +394,40 @@ body {
 .first__title:not(:last-child) {
   margin-bottom: 32px;
 }
+@media (max-width: 768px) {
+  .first__title {
+    font-size: 3.25rem;
+  }
+}
+@media (max-width: 550px) {
+  .first__title {
+    font-size: 2.1875rem;
+  }
+}
 .first__btn-box {
   display: flex;
   align-items: center;
-  gap: 32px;
+  flex-wrap: wrap;
+  gap: 16px 32px;
+}
+@media (max-width: 550px) {
+  .first__btn-box {
+    justify-content: center;
+  }
 }
 .first__btn-box:not(:last-child) {
   margin-bottom: 48px;
+}
+@media (max-width: 550px) {
+  .first__btn-box:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+@media (max-width: 550px) {
+  .first__btn {
+    width: 100%;
+    text-align: center;
+  }
 }
 .first__btn-video {
   display: flex;
@@ -297,10 +477,22 @@ body {
   font-size: 1.125rem;
   color: var(--black);
 }
+@media (max-width: 550px) {
+  .first__info-schedule {
+    font-size: 1rem;
+  }
+}
 .first__image-box {
   flex: 0 1 45%;
   min-height: 632px;
   position: relative;
+}
+@media (max-width: 1024px) {
+  .first__image-box {
+    width: 100%;
+    min-height: unset;
+    padding-bottom: 50%;
+  }
 }
 .first__image {
   position: absolute;
@@ -377,4 +569,9 @@ body {
 }
 .popup-box__image img {
   display: block;
+}
+@media (max-width: 1024px) {
+  .popup-box {
+    display: none;
+  }
 }
