--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -1,16 +1,51 @@
 .header {
 	background-color: var(--white);
 	padding: 18px 0;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 55; //* общепринятое значение
+	box-shadow: 0 0 5px 0 rgba(#000, 0.2);
+
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		right: -100%;
+		width: 100%;
+		background-color: var(--white);
+		box-shadow: 0 0 5px 0 rgba(#000, 0.2);
+		z-index: 1;
+		transition: right 0.5s;
+	}
+
+	&.active {
+		&::before {
+			right: 0;
+		}
+	}
 
 	&__body {
 		display: flex;
 		align-items: center;
 		gap: 32px;
+
+		@media (max-width: 1024px) {
+			justify-content: space-between;
+		}
 	}
 
 	&__logo {
 		//* чтобы лого не сжимался при уменьшении экрана
 		flex-shrink: 0;
+		position: relative;
+		z-index: 2;
+
+		img {
+			display: block; // чтоб картинка с лого растянулась на весь размер родителя
+		}
 	}
 
 	&__menu {
@@ -26,13 +61,25 @@
 
 		// вертикальная полоска
 		&::before {
-			content: '';
+			content: "";
 			position: absolute;
 			top: 6px; // чтобы укоротить полоску по длине
 			bottom: 6px; // чтобы укоротить полоску по длине
 			left: 0;
 			width: 1px;
 			background-color: var(--ultralight-gray);
+
+			@media (max-width: 1024px) {
+				display: none;
+			}
+		}
+
+		@media (max-width: 1024px) {
+			border-bottom: 1px solid var(--ultralight-gray);
+			width: 100%;
+			align-items: center;
+			padding: 0 0 20px 0;
+			margin-bottom: 20px;
 		}
 	}
 
@@ -48,8 +95,8 @@
 		transition: all 0.5s;
 
 		&::before {
-			content: '';
-			background: var(--green) url('../images/icons/phone.svg') center/20px no-repeat;
+			content: "";
+			background: var(--green) url("../images/icons/phone.svg") center/20px no-repeat;
 			width: 40px;
 			height: 40px;
 			border-radius: 50%;
@@ -58,6 +105,10 @@
 			transform: translateY(-50%);
 			left: 32px;
 			transition: all 0.5s;
+
+			@media (max-width: 1024px) {
+				display: none;
+			}
 		}
 
 		&:hover {
@@ -79,13 +130,39 @@
 }
 
 .menu {
+	@media (max-width: 1024px) {
+		position: absolute;
+		top: 0;
+		right: -100%;
+		width: 100%;
+		height: 100vh;
+		padding-top: calc(var(--header-height) + 30px);
+		padding-bottom: 30px;
+		background-color: var(--white);
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		overflow: auto;
+		transition: right 0.5s;
+
+		&.active {
+			right: 0;
+		}
+	}
+
 	&__list {
 		margin: 0;
 		padding: 0;
 		list-style-type: none;
 		display: flex;
-		gap: 0 40px;
+		gap: 10px 40px;
 		flex-wrap: wrap; //* чтоб ломался при большом кол-ве пунктов меню
+		width: 100%;
+
+		@media (max-width: 1024px) {
+			flex-direction: column;
+			align-items: center;
+		}
 	}
 
 	&__item {
@@ -96,6 +173,10 @@
 		text-decoration: none;
 		transition: all 0.5s;
 		position: relative;
+
+		@media (max-width: 1024px) {
+			font-size: rem(18);
+		}
 
 		&::after {
 			content: "";
@@ -115,6 +196,67 @@
 				left: 0; //* чтобы полоса выезжала из центра
 				right: 0; //* чтобы полоса выезжала из центра
 			}
+		}
+	}
+}
+
+.menu-btn {
+	display: none;
+	position: relative;
+	z-index: 2;
+	width: 40px;
+	height: 30px;
+	border: none;
+	background: transparent;
+
+	@media (max-width: 1024px) {
+		display: block;
+	}
+
+	span {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 0;
+		width: 100%;
+		height: 2px;
+		background-color: var(--black);
+		transition: all 0.3s; // тут специально ускорена анимация, так лучше смотрится
+	}
+
+	&::before,
+	&::after {
+		content: "";
+		position: absolute;
+		left: 0;
+		width: 100%;
+		height: 2px;
+		background-color: var(--black);
+		transition: all 0.5s;
+	}
+
+	&::before {
+		top: 0;
+	}
+
+	&::after {
+		bottom: 0;
+	}
+
+	&.active {
+		span {
+			opacity: 0;
+		}
+
+		&::before {
+			top: 50%;
+			transform: translateY(-50%) rotate(-45deg);
+		}
+
+		&::after {
+			bottom: unset;
+			top: 50%;
+			transform: translateY(-50%) rotate(45deg);
 		}
 	}
 }
