--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -4,6 +4,7 @@
 	--gray: #787676;
 	--light-gray: #939191;
 	--ultralight-gray: #d8d7d7;
+	--bg-gray: #F2F2F2;
 	--white: #fff;
 	--black: #1e1b1b;
 	--orange: #ff6433;
