--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -30,7 +30,7 @@ button {
 body {
 	font-family: var(--main-font);
 	font-style: normal;
-	font-weight: 600;
+	font-weight: 600; // SemiBold
 	font-size: rem(16); // 1rem
 	color: var(--gray);
 	line-height: lh(28, 16); // 175%
