--- a/scss/modules/_offer.scss
+++ b/scss/modules/_offer.scss
@@ -11,6 +11,9 @@
 	}
 
 	&__body {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
 	}
 
 	&__subtitle {
@@ -57,6 +60,8 @@
 		display: flex;
 		flex-wrap: wrap;
 		gap: 8px var(--gap-horizontal);
+
+		width: 100%; //! ===> чтобы элементы не прилипали к правой стороне экрана
 
 		&:not(:last-child) {
 			margin-bottom: 32px;
