--- a/scss/modules/_process.scss
+++ b/scss/modules/_process.scss
@@ -2,11 +2,27 @@
 	padding: 135px 0; // от себя
 	background: var(--white);
 
+	@media (max-width: 1024px) {
+		padding: 90px 0;
+	}
+
+	@media (max-width: 768px) {
+		padding: 60px 0;
+	}
+
 	&__body {
 		display: flex;
 		justify-content: space-between;
 		gap: 32px; // от себя
 		width: 90%; // на глаз, вместо правого паддинга, потому что секция Уже стандартного контейнера
+
+		@media (max-width: 1024px) {
+			width: 100%;
+		}
+
+		@media (max-width: 768px) {
+			flex-direction: column;
+		}
 	}
 
 	&__info {
@@ -26,12 +42,20 @@
 
 		max-width: 437px;
 
+		@media (max-width: 768px) {
+			max-width: 100%;
+		}
+
 		&:not(:last-child) {
 			margin-bottom: 32px;
 		}
 	}
 
 	&__btn {
+		@media (max-width: 550px) {
+			width: 100%;
+			text-align: center;
+		}
 	}
 
 	&__list {
@@ -42,6 +66,10 @@
 
 		//! Счётчик
 		counter-reset: myCounter;
+
+		@media (max-width: 1024px) {
+			flex: 0 1 50%;
+		}
 	}
 
 	&__item {
@@ -54,6 +82,10 @@
 .process-item {
 	position: relative;
 	padding: 13px 0 0 96px;
+
+	@media (max-width: 550px) {
+		padding: 8px 0 0 68px;
+	}
 
 	&::before {
 		//! для всех item добавляем 0 в начале
@@ -68,12 +100,21 @@
 		width: 72px;
 		height: 72px;
 		background: url('../images/icons/circle-decor.png') var(--purple);
+		background-position: bottom;
+		background-repeat: no-repeat;
+		background-size: 100%;
 		border-radius: 50%;
 
 		font-weight: 700;
 		font-size: rem(32);
 		line-height: lh(24, 32);
 		color: var(--white);
+
+		@media (max-width: 550px) {
+			width: 52px;
+			height: 52px;
+			font-size: rem(24);
+		}
 	}
 
 	&:nth-child(n + 10) {
@@ -93,6 +134,11 @@
 		display: block; // чтобы потом убрать последнюю полоску
 		height: calc(100% - 72px - 16px - 12px); // высота кружка - растояние от кружка до полоски - bottom
 		border: 1px dashed var(--orange);
+
+		@media (max-width: 550px) {
+			left: 25px;
+			height: calc(100% - 52px - 16px - 12px);
+		}
 	}
 
 	&:last-child {
@@ -109,6 +155,10 @@
 		font-size: rem(32);
 		line-height: lh(48, 32);
 
+		@media (max-width: 550px) {
+			font-size: rem(24);
+		}
+
 		&:not(:last-child) {
 			margin-bottom: 8px;
 		}
@@ -118,7 +168,14 @@
 		@extend %reset;
 
 		font-size: rem(18);
-
 		max-width: 336px;
+
+		@media (max-width: 768px) {
+			max-width: 100%;
+		}
+
+		@media (max-width: 550px) {
+			font-size: rem(16);
+		}
 	}
 }
