--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,4 @@
 @import './modules/_first.scss';
 @import './modules/_offer.scss';
 @import './modules/_process.scss';
+@import './modules/_call-to-action.scss';
