--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,3 +7,4 @@
 @import './modules/_offer.scss';
 @import './modules/_process.scss';
 @import './modules/_call-to-action.scss';
+@import './modules/_experience.scss';
