--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,10 +1,10 @@
 :root {
 	// colors
-
 	--gray: #787676;
 	--light-gray: #939191;
 	--ultralight-gray: #d8d7d7;
 	--bg-gray: #F2F2F2;
+	--bg-gray2: #E2E6E9;
 	--white: #fff;
 	--black: #1e1b1b;
 	--orange: #ff6433;
