--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,3 +8,4 @@
 @import './modules/_process.scss';
 @import './modules/_call-to-action.scss';
 @import './modules/_experience.scss';
+@import './modules/_brands.scss';
