--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,3 +9,4 @@
 @import './modules/_call-to-action.scss';
 @import './modules/_experience.scss';
 @import './modules/_brands.scss';
+@import './modules/_blog.scss';
