--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,3 +10,4 @@
 @import './modules/_experience.scss';
 @import './modules/_brands.scss';
 @import './modules/_blog.scss';
+@import './modules/_testimonials.scss';
