--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -53,6 +53,10 @@ body {
 	max-width: calc(var(--container-width) + (var(--container-gap) * 2));
 	padding: 0 var(--container-gap);
 	margin: 0 auto;
+
+	&--small {
+		--container-width: 896px;
+	}
 }
 
 //* COMPONENTS
