--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,3 +11,4 @@
 @import './modules/_brands.scss';
 @import './modules/_blog.scss';
 @import './modules/_testimonials.scss';
+@import './modules/_faq.scss';
