--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -2,12 +2,13 @@
 	// colors
 	--gray: #787676;
 	--light-gray: #939191;
-	--ultralight-gray: #d8d7d7;
-	--bg-gray: #F2F2F2;
 	--bg-gray2: #E2E6E9;
+	--bg-gray: #F2F2F2;
+	--ultralight-gray: #d8d7d7;
 	--white: #fff;
-	--light-black: #232536;
 	--black: #1e1b1b;
+	--shadow-black: #222020;
+	--light-black: #232536;
 	--orange: #ff6433;
 	--green: #61c3a1;
 	--green2: #5cba99;
@@ -17,6 +18,7 @@
 	--container-width: 1280px;
 	--container-gap: 15px;
 	--header-height: 88px;
+	--input-height: 68px;
 
 	// fonts
 	--main-font: "Manrope", sans-serif;
