--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,4 @@
 @import './modules/_blog.scss';
 @import './modules/_testimonials.scss';
 @import './modules/_faq.scss';
+@import './modules/_get-in-touch.scss';
