--- a/css/style.css
+++ b/css/style.css
@@ -1659,7 +1659,7 @@ body {
   top: var(--input-height);
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 200px;
   overflow: auto;
   border: 2px solid var(--light-gray);
   display: none;
