--- a/scss/modules/_get-in-touch.scss
+++ b/scss/modules/_get-in-touch.scss
@@ -145,7 +145,7 @@
 			top: var(--input-height);
 			left: 0;
 			width: 100%;
-			height: 100%;
+			height: 200px;
 			overflow: auto;
 			border: 2px solid var(--light-gray);
 			display: none;
