finished the 'footer' section

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -67,6 +67,14 @@ body {
 	overflow: hidden;
 }
 
+.logo {
+	transition: all 0.3s;
+
+	&:hover {
+		transform: scale(1.1);
+	}
+}
+
 .btn {
 	text-decoration: none;
 	color: var(--white);
