--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,3 +13,4 @@
 @import './modules/_testimonials.scss';
 @import './modules/_faq.scss';
 @import './modules/_get-in-touch.scss';
+@import './modules/_footer.scss';
